fixed video dimensions on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -77,11 +77,11 @@ button:hover {
   margin: 0 auto;
 }
 
-#canvas {
+canvas {
   display: none;
 }
 
-#player {
-  max-width: 500px;
-  max-height: 500px;
+video {
+  max-width: 100%;
+  max-height: 100%;
 }
